Commonly used strings to constants, slightly improve control disposal (still getting mem leaks)

--- a/SimpleCL/SimpleCL.csproj
+++ b/SimpleCL/SimpleCL.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Enums\Chatter\ChatChannel.cs" />
     <Compile Include="Enums\Commons\Locale.cs" />
     <Compile Include="Enums\Commons\Opcodes.cs" />
+    <Compile Include="Enums\Constants.cs" />
     <Compile Include="Enums\Events\EntityStateEvent.cs" />
     <Compile Include="Enums\Events\InventoryAction.cs" />
     <Compile Include="Enums\Items\ItemCategory.cs" />
