Add equipping/unequipping equipment, added more models for item types

--- a/SimpleCL/SimpleCL.csproj
+++ b/SimpleCL/SimpleCL.csproj
@@ -88,12 +88,11 @@
     <Compile Include="Enums\Events\EntityStateEvent.cs" />
     <Compile Include="Enums\Events\InventoryAction.cs" />
     <Compile Include="Enums\Items\ItemCategory.cs" />
-    <Compile Include="Enums\Items\ItemParser.cs" />
-    <Compile Include="Enums\Items\Type\ConsumableData.cs" />
-    <Compile Include="Enums\Items\Type\CosData.cs" />
-    <Compile Include="Enums\Items\Type\EquipmentData.cs" />
-    <Compile Include="Enums\Items\Type\FellowEquipmentData.cs" />
-    <Compile Include="Enums\Items\Type\JobEquipmentData.cs" />
+    <Compile Include="Enums\Items\Type\ConsumableType.cs" />
+    <Compile Include="Enums\Items\Type\CosType.cs" />
+    <Compile Include="Enums\Items\Type\EquipmentType.cs" />
+    <Compile Include="Enums\Items\Type\FellowEquipmentType.cs" />
+    <Compile Include="Enums\Items\Type\JobEquipmentType.cs" />
     <Compile Include="Enums\Login\Error\AuthErrorCode.cs" />
     <Compile Include="Enums\Login\Error\LoginBlockType.cs" />
     <Compile Include="Enums\Login\Error\LoginErrorCode.cs" />
@@ -157,9 +156,19 @@
     <Compile Include="Models\Exceptions\EntityParseException.cs" />
     <Compile Include="Models\IIdentifiable.cs" />
     <Compile Include="Models\ITargetable.cs" />
+    <Compile Include="Models\Items\Consumables\Consumable.cs" />
+    <Compile Include="Models\Items\Consumables\Potion.cs" />
+    <Compile Include="Models\Items\Consumables\Scroll.cs" />
+    <Compile Include="Models\Items\Consumables\Scrolls\ReverseReturn.cs" />
+    <Compile Include="Models\Items\Equipables\Avatar.cs" />
+    <Compile Include="Models\Items\Equipables\Equipment.cs" />
+    <Compile Include="Models\Items\Equipables\FellowEquipment.cs" />
+    <Compile Include="Models\Items\Equipables\Weapon.cs" />
     <Compile Include="Models\Items\InventoryItem.cs" />
+    <Compile Include="Models\Items\JobEquipables\JobEquipment.cs" />
     <Compile Include="Models\Items\ShopItem.cs" />
     <Compile Include="Models\Items\StallItem.cs" />
+    <Compile Include="Models\Items\Summons\SummonItem.cs" />
     <Compile Include="Models\Server\GameServer.cs" />
     <Compile Include="Models\Skills\Buff.cs" />
     <Compile Include="Models\Skills\CharacterSkill.cs" />
@@ -172,6 +181,7 @@
     <Compile Include="Services\Game\ChatService.cs" />
     <Compile Include="Services\Game\EntitySkillService.cs" />
     <Compile Include="Services\Game\EntityStateService.cs" />
+    <Compile Include="Services\Game\InventoryService.cs" />
     <Compile Include="Services\Game\LocalPlayerService.cs" />
     <Compile Include="Services\Game\EntityMovementService.cs" />
     <Compile Include="Services\Game\EntitySpawnService.cs" />
