Fix item usage packet, add support for (un)summoning pets, casting buffs on players, attacking monsters/players with skills, ressing dead players

--- a/SimpleCL/SimpleCL.csproj
+++ b/SimpleCL/SimpleCL.csproj
@@ -130,13 +130,16 @@
     <Compile Include="Models\Entities\Mob\Flower.cs" />
     <Compile Include="Models\Entities\Mob\TraderCaravan.cs" />
     <Compile Include="Models\Entities\Mob\ThiefCaravan.cs" />
-    <Compile Include="Models\Entities\Pet\AttackPet.cs" />
-    <Compile Include="Models\Entities\Pet\FellowPet.cs" />
-    <Compile Include="Models\Entities\Pet\GuildGuard.cs" />
-    <Compile Include="Models\Entities\Pet\Horse.cs" />
-    <Compile Include="Models\Entities\Pet\PickPet.cs" />
-    <Compile Include="Models\Entities\Pet\QuestPet.cs" />
-    <Compile Include="Models\Entities\Pet\Transport.cs" />
+    <Compile Include="Models\Entities\Npcs\Shop.cs" />
+    <Compile Include="Models\Entities\Npcs\Storage.cs" />
+    <Compile Include="Models\Entities\Npcs\TalkNpc.cs" />
+    <Compile Include="Models\Entities\Pets\AttackPet.cs" />
+    <Compile Include="Models\Entities\Pets\FellowPet.cs" />
+    <Compile Include="Models\Entities\Pets\GuildGuard.cs" />
+    <Compile Include="Models\Entities\Pets\Horse.cs" />
+    <Compile Include="Models\Entities\Pets\PickPet.cs" />
+    <Compile Include="Models\Entities\Pets\QuestPet.cs" />
+    <Compile Include="Models\Entities\Pets\Transport.cs" />
     <Compile Include="Models\Entities\Entity.cs" />
     <Compile Include="Models\Entities\FortressCos.cs" />
     <Compile Include="Models\Entities\Fortress\FortressDefenseGuard.cs" />
@@ -144,8 +147,6 @@
     <Compile Include="Models\Entities\Fortress\FortressMonster.cs" />
     <Compile Include="Models\Entities\Fortress\FortressPatrolGuard.cs" />
     <Compile Include="Models\Entities\FortressStructure.cs" />
-    <Compile Include="Models\Entities\Shop.cs" />
-    <Compile Include="Models\Entities\TalkNpc.cs" />
     <Compile Include="Models\Entities\Monster.cs" />
     <Compile Include="Models\Entities\Npc.cs" />
     <Compile Include="Models\Entities\Actor.cs" />
@@ -168,7 +169,7 @@
     <Compile Include="Models\Items\JobEquipables\JobEquipment.cs" />
     <Compile Include="Models\Items\ShopItem.cs" />
     <Compile Include="Models\Items\StallItem.cs" />
-    <Compile Include="Models\Items\Summons\SummonItem.cs" />
+    <Compile Include="Models\Items\Summons\Summon.cs" />
     <Compile Include="Models\Server\GameServer.cs" />
     <Compile Include="Models\Skills\Buff.cs" />
     <Compile Include="Models\Skills\CharacterSkill.cs" />
