--- a/SimpleCL/SimpleCL.csproj
+++ b/SimpleCL/SimpleCL.csproj
@@ -181,6 +181,7 @@
         <Compile Include="Models\Skills\Skill.cs" />
         <Compile Include="Network\Agent.cs" />
         <Compile Include="Network\Gateway.cs" />
+        <Compile Include="Network\Proxy.cs" />
         <Compile Include="Network\Server.cs" />
         <Compile Include="Network\Socks.cs" />
         <Compile Include="Properties\Annotations.cs" />
