--- a/Pk2Extractor/packages.config
+++ b/Pk2Extractor/packages.config
@@ -2,8 +2,13 @@
 <packages>
   <package id="EntityFramework" version="6.4.4" targetFramework="net461" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.114.0" targetFramework="net461" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="6.0.0-preview.6.21352.12" targetFramework="net472" />
   <package id="System.Data.SQLite" version="1.0.114.4" targetFramework="net461" />
   <package id="System.Data.SQLite.Core" version="1.0.114.3" targetFramework="net461" />
   <package id="System.Data.SQLite.EF6" version="1.0.114.0" targetFramework="net461" />
   <package id="System.Data.SQLite.Linq" version="1.0.114.0" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0-preview.6.21352.12" targetFramework="net472" />
 </packages>
