--- a/Pk2Extractor/Pk2Extractor.csproj
+++ b/Pk2Extractor/Pk2Extractor.csproj
@@ -34,9 +34,6 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
-        <Reference Include="DevIL.NET2, Version=1.1.2619.31671, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\Libs\DevIL.NET2.dll</HintPath>
-        </Reference>
         <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
           <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.dll</HintPath>
           <Private>True</Private>
@@ -45,10 +42,10 @@
           <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
           <Private>True</Private>
         </Reference>
-        <Reference Include="mscorlib" />
-        <Reference Include="SilkroadSecurityApi, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\Libs\SilkroadSecurityApi.dll</HintPath>
+        <Reference Include="GDImageLibrary, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\Libs\GDImageLibrary.dll</HintPath>
         </Reference>
+        <Reference Include="mscorlib" />
         <Reference Include="System" />
         <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51">
           <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
